@@ -26,11 +26,11 @@
 (defvar user-include-dirs
   '(".." "../include" "../inc" "../common" "../public"
     "../.." "../../include" "../../inc" "../../common" "../../public"
-    "C:/MinGW/include"
-    "C:/MinGW/include/c++/3.4.5"
-    "C:/MinGW/include/c++/3.4.5/mingw32"
-    "C:/MinGW/include/c++/3.4.5/backward"
-    "C:/MinGW/lib/gcc/mingw32/3.4.5/include"
+    ;; "C:/MinGW/include"
+    ;; "C:/MinGW/include/c++/3.4.5"
+    ;; "C:/MinGW/include/c++/3.4.5/mingw32"
+    ;; "C:/MinGW/include/c++/3.4.5/backward"
+    ;; "C:/MinGW/lib/gcc/mingw32/3.4.5/include"
     "C:/Program Files/Microsoft Visual Studio/VC98/Include"
     "C:/Program Files/Microsoft Visual Studio/VC98/MFC/Include"
     ;; "C:/Program Files/Microsoft Visual Studio 10.0/VC/include"
@@ -809,6 +809,8 @@ Use CREATE-TEMP-F for creating temp copy."
           ede-locate-base))
 
   (require 'semantic/bovine/c nil 'noerror)
+  (when (executable-find "gcc")
+    (semantic-gcc-setup))
   (mapc (lambda (dir)
           (semantic-add-system-include dir 'c++-mode)
           (semantic-add-system-include dir 'c-mode))
