@@ -1,3 +1,7 @@
+2010-12-07  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el: Setup INCLUDE path for gcc.
+
 2010-12-06  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (org-mode-hook): Don't enable whitespace and
